// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Navitem component > applies active styles when link is active 1`] = `
<DocumentFragment>
  <div
    data-testid="Home-navlink"
  >
    <a
      aria-current="page"
      class="sc-gEvDqW ixgtyG active"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="sc-aYaIB cCERKD"
      >
        <div
          class="sc-eqUzNf kbmWsj"
        >
          <svg
            data-testid="mock-icon"
            fill="var(--primary-200, #177BA6)"
            stroke="var(--primary-200, #177BA6)"
          />
        </div>
        <p
          class="sc-fqkwJk lmZzif"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Navitem component > applies correct icon color when link is active 1`] = `
<DocumentFragment>
  <div
    data-testid="Home-navlink"
  >
    <a
      aria-current="page"
      class="sc-gEvDqW ixgtyG active"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="sc-aYaIB cCERKD"
      >
        <div
          class="sc-eqUzNf kbmWsj"
        >
          <svg
            data-testid="mock-icon"
            fill="var(--primary-200, #177BA6)"
            stroke="var(--primary-200, #177BA6)"
          />
        </div>
        <p
          class="sc-fqkwJk lmZzif"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Navitem component > applies correct icon color when link is not active 1`] = `
<DocumentFragment>
  <div
    data-testid="Home-navlink"
  >
    <a
      class="sc-gEvDqW ixgtyG"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="sc-aYaIB cExATB"
      >
        <div
          class="sc-eqUzNf kbmWsj"
        >
          <svg
            data-testid="mock-icon"
          />
        </div>
        <p
          class="sc-fqkwJk fFtWrx"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Navitem component > does not apply active styles when link is not active 1`] = `
<DocumentFragment>
  <div
    data-testid="Home-navlink"
  >
    <a
      class="sc-gEvDqW ixgtyG"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="sc-aYaIB cExATB"
      >
        <div
          class="sc-eqUzNf kbmWsj"
        >
          <svg
            data-testid="mock-icon"
          />
        </div>
        <p
          class="sc-fqkwJk fFtWrx"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Navitem component > does not render expanded text when isExpanded is false 1`] = `
<DocumentFragment>
  <div
    data-testid="Home-navlink"
  >
    <a
      class="sc-gEvDqW ixgtyG"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="sc-aYaIB cCERKD"
      >
        <div
          class="sc-eqUzNf kbmWsj"
        >
          <svg
            data-testid="mock-icon"
            fill="var(--primary-200, #177BA6)"
            stroke="var(--primary-200, #177BA6)"
          />
        </div>
        <p
          class="sc-fqkwJk fDjqbC"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Navitem component > does not render icon when not provided 1`] = `
<DocumentFragment>
  <div
    data-testid="Home-navlink"
  >
    <a
      class="sc-gEvDqW ixgtyG"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="sc-aYaIB cCERKD"
      >
        <div
          class="sc-eqUzNf kbmWsj"
        />
        <p
          class="sc-fqkwJk lmZzif"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Navitem component > renders expanded text when isExpanded is true 1`] = `
<DocumentFragment>
  <div
    data-testid="Home-navlink"
  >
    <a
      class="sc-gEvDqW ixgtyG"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="sc-aYaIB cCERKD"
      >
        <div
          class="sc-eqUzNf kbmWsj"
        >
          <svg
            data-testid="mock-icon"
            fill="var(--primary-200, #177BA6)"
            stroke="var(--primary-200, #177BA6)"
          />
        </div>
        <p
          class="sc-fqkwJk lmZzif"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Navitem component > renders icon when provided 1`] = `
<DocumentFragment>
  <div
    data-testid="Home-navlink"
  >
    <a
      class="sc-gEvDqW ixgtyG"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="sc-aYaIB cCERKD"
      >
        <div
          class="sc-eqUzNf kbmWsj"
        >
          <svg
            data-testid="mock-icon"
            fill="var(--primary-200, #177BA6)"
            stroke="var(--primary-200, #177BA6)"
          />
        </div>
        <p
          class="sc-fqkwJk lmZzif"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Navitem component > renders with correct text 1`] = `
<DocumentFragment>
  <div
    data-testid="Home-navlink"
  >
    <a
      class="sc-gEvDqW ixgtyG"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="sc-aYaIB cCERKD"
      >
        <div
          class="sc-eqUzNf kbmWsj"
        >
          <svg
            data-testid="mock-icon"
            fill="var(--primary-200, #177BA6)"
            stroke="var(--primary-200, #177BA6)"
          />
        </div>
        <p
          class="sc-fqkwJk lmZzif"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Navitem component > renders without crashing 1`] = `
<DocumentFragment>
  <div
    data-testid="Home-navlink"
  >
    <a
      class="sc-gEvDqW ixgtyG"
      data-testid="Home"
      data-tooltip-content="Home"
      data-tooltip-id="navlink"
      href="/home"
    >
      <div
        class="sc-aYaIB cCERKD"
      >
        <div
          class="sc-eqUzNf kbmWsj"
        >
          <svg
            data-testid="mock-icon"
            fill="var(--primary-200, #177BA6)"
            stroke="var(--primary-200, #177BA6)"
          />
        </div>
        <p
          class="sc-fqkwJk lmZzif"
        >
          Home
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;
